--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,9 @@
   	<li class="nav-item">
     	<a class="nav-link" href="/">Home</a>
   	</li>
+    <li class="nav-item">
+    	<a class="nav-link" href="/users">Users</a>
+  	</li>
   	<li class="nav-item">
     	<a class="nav-link" href="lakers">Los Angeles Lakers</a>
   	</li>
